# pygixml

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  test_example.py
.github/workflows/: cmake.yml  docs.yml  python.yml  wheels.yml
benchmarks/: benchmark_parsing.py  full_benchmark.py
benchmarks/results/: benchmark_full.json
cmake/: FixLCovPaths.cmake  Optimize.cmake  Startup.cmake
docs/source/: advanced.rst  api.rst  conf.py  dictify.rst  examples.rst  index.rst  installation.rst  jsonify.rst  objectify.rst  performance.rst  quickstart.rst  streaming.rst  xml_basics.rst  xpath.rst
docs/source/api/: pygixml.pygixml_cy.rst  pygixml.rst
examples/: basic_usage.py  data.xml  data_reader.py  simple.py  type_property_usage.py  xml_property_usage.py  xpath_usage.py
src/: CMakeLists.txt  dictify.pxi  jsonify.pxi  objectify.pxi  pygixml.pyx  pygixml_cy.pyx  stream.pxi
src/pygixml/: __init__.py  __main__.py  dictify.py  jsonify.py  objectify.py  pygixml.pyx  query.py
tests/: test_advanced.py  test_basic.py  test_children.py  test_dictify.py  test_jsonify.py  test_jsonify_stream.py  test_objectify.py  test_parse_flags.py  test_stream.py  test_stream_json.py  test_xml_property.py  test_xml_text.py
