[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "scikit-build-core[pyproject]>=0.4",
    "cmake>=3.15",
    "ninja",
    "cython>=0.29"
]
build-backend = "scikit_build_core.build"

[project]
name = "pygixml"
version = "0.1.0"
description = "Python wrapper for pugixml using Cython"
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["xml", "pugixml", "cython", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["pygixml"]

[tool.setuptools.package-dir]
pygixml = "src/pygixml"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"

[tool.cmake.build]
targets = ["pygixml"]

[tool.cmake.install]
components = ["pygixml"]
