[build-system]
requires = [
    "scikit-build-core",
    "cython",
    "stubgen-pyx; python_version >= '3.9'",
]
build-backend = "scikit_build_core.build"

[project]
name = "pygixml"
version = "0.10.1"
description = "High-performance Cython XML parser for Python — pugixml with a Pythonic API"
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["xml", "pugixml", "cython", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/mohammadraziei/pygixml"
"Bug Tracker" = "https://github.com/mohammadraziei/pygixml/issues"
"Document" = "https://mohammadraziei.github.io/pygixml"


[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"
define.CMAKE_BUILD_PARALLEL_LEVEL="8"
args = ["--no-warn-unused-cli"]

[tool.scikit-build.build]
targets = ["pygixml_cy"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]


[tool.cibuildwheel.macos]
archs = "universal2"